crates/compiler/src/tests/e2e/good/0262_struct_person/main.gom
struct Person {
    name: string,
    age: int32,
}

fn main() {
    let name = "Alice";
    let age = 30;
    let p = Person { name, age };
    println(p.name);
    println((p.age).to_string());
}
