crates/compiler/src/tests/e2e/bad/0010_wrong_struct_field_type/main.gom
struct Person {
  name: string,
  age: int32,
}

fn main() -> unit {
  let p = Person { name: 42, age: "unknown" };
  println(p.name)
}
